--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -82,6 +82,8 @@ option(BUILD_SHARED_LIBS "Build shared libraries instead of static." ON)
 option(STEAMAUDIO_BUILD_TESTS "Build unit tests." ON)
 option(STEAMAUDIO_BUILD_BENCHMARKS "Build benchmarks." ON)
 option(STEAMAUDIO_BUILD_SAMPLES "Build samples." ON)
+option(STEAMAUDIO_EXPORT "Export the project for use by downstream. Requires that required dependencies are found via Config mode." OFF)
+option(STEAMAUDIO_CLOSED_SOURCE_DEPS "Use closed source libraries. Otherwise attempt to skip" ON)
 
 if (IPL_OS_WINDOWS AND IPL_CPU_X64)
     option(STEAMAUDIO_BUILD_ITESTS "Build interactive tests." ON)
@@ -192,8 +194,13 @@ endif()
 
 # macOS flags
 if (IPL_OS_MACOS)
-    set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
-    set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13")
+    # Allow project invoker to override OSX settings
+    if(NOT CMAKE_OSX_ARCHITECTURES)
+        set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
+    endif()
+    if(NOT CMAKE_OSX_DEPLOYMENT_TARGET)
+        set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13")
+    endif()
     add_compile_options(-Wno-extern-c-compat) # Suppress warning about empty API structs.
     add_compile_options(-Wno-unknown-attributes) # Suppress warning in FlatBuffers.
 endif()
@@ -240,7 +247,11 @@ if (STEAMAUDIO_ENABLE_FFTS)
 endif()
 
 if (NOT FFT_LIBRARY)
-    find_package(PFFFT REQUIRED)
+    if(STEAMAUDIO_EXPORT)
+        find_package(PFFFT CONFIG REQUIRED)
+    else()
+        find_package(PFFFT REQUIRED)
+    endif()
     set(FFT_LIBRARY PFFFT)
 endif()
 
@@ -252,10 +263,15 @@ if (STEAMAUDIO_ENABLE_MKL)
     endif()
 endif()
 
-find_package(MySOFA REQUIRED)
-find_package(FlatBuffers REQUIRED)
+if(STEAMAUDIO_EXPORT)
+    find_package(MySOFA CONFIG REQUIRED)
+    find_package(FlatBuffers CONFIG REQUIRED)
+else()
+    find_package(MySOFA REQUIRED)
+    find_package(FlatBuffers REQUIRED)
+endif()
 
-if (STEAMAUDIO_ENABLE_EMBREE)
+if (STEAMAUDIO_ENABLE_EMBREE AND STEAMAUDIO_CLOSED_SOURCE_DEPS)
     find_package(ISPC 1.12 EXACT)
     find_package(Embree 2.17 EXACT)
     if (NOT ISPC_FOUND OR NOT Embree_FOUND)
@@ -264,7 +280,7 @@ if (STEAMAUDIO_ENABLE_EMBREE)
     endif()
 endif()
 
-if (STEAMAUDIO_ENABLE_RADEONRAYS)
+if (STEAMAUDIO_ENABLE_RADEONRAYS AND STEAMAUDIO_CLOSED_SOURCE_DEPS)
     find_package(Python COMPONENTS Interpreter)
     find_package(RadeonRays)
     if (NOT Python_FOUND OR NOT RadeonRays_FOUND)
@@ -273,7 +289,7 @@ if (STEAMAUDIO_ENABLE_RADEONRAYS)
     endif()
 endif()
 
-if (STEAMAUDIO_ENABLE_TRUEAUDIONEXT)
+if (STEAMAUDIO_ENABLE_TRUEAUDIONEXT AND STEAMAUDIO_CLOSED_SOURCE_DEPS)
     find_package(TrueAudioNext)
     if (NOT TrueAudioNext_FOUND)
         message(STATUS "Disabling TrueAudioNext")
