Add support for 16 KB page sizes on Android
Fixes: #435

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -216,6 +216,9 @@ if (IPL_OS_ANDROID)
     include_directories(SYSTEM ${CMAKE_ANDROID_NDK}/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1)
 
     add_link_options(-static-libstdc++)
+
+    # Enable 16 KB page size support. (https://developer.android.com/about/versions/15/behavior-changes-all#16-kb)
+    add_link_options("-Wl,-z,max-page-size=16384")
 endif()
 
 # iOS flags
