[unity] Add C# API reference
This adds documentation for the following methods of SteamAudioManager:

- NotifyAudioListenerChanged
- NotifyAudioListenerChangedTo

Fixes: #449

--- a/unity/CMakeLists.txt
+++ b/unity/CMakeLists.txt
@@ -194,9 +194,14 @@ find_package(Unity REQUIRED)
 
 find_package(SteamAudio REQUIRED)
 
+include(SteamAudioHelpers)
 if (STEAMAUDIOUNITY_BUILD_DOCS)
+    get_host_bin_subdir(IPL_BIN_SUBDIR)
+    set(Doxygen_ROOT ${CMAKE_HOME_DIRECTORY}/../core/deps/doxygen/bin/${IPL_BIN_SUBDIR})
+    set(DOXYGEN_SKIP_DOT TRUE)
+    find_package(Doxygen)
     find_package(Sphinx)
-    if (NOT Sphinx_FOUND)
+    if (NOT DOXYGEN_FOUND OR NOT Sphinx_FOUND)
         message(STATUS "Disabling docs")
         set(STEAMAUDIOUNITY_BUILD_DOCS OFF)
     endif()
