--- a/unity/doc/CMakeLists.txt
+++ b/unity/doc/CMakeLists.txt
@@ -12,6 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+
+add_custom_command(
+    OUTPUT              ${CMAKE_CURRENT_BINARY_DIR}/xml/index.xml
+    DEPENDS             ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    DEPENDS             ${CMAKE_CURRENT_SOURCE_DIR}/../src/project/SteamAudioUnity/Assets/Plugins/SteamAudio/Scripts/Runtime/SteamAudioManager.cs
+    COMMAND             ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    WORKING_DIRECTORY   ${CMAKE_CURRENT_BINARY_DIR}
+    VERBATIM
+)
+
 add_custom_command(
 	OUTPUT				${CMAKE_CURRENT_BINARY_DIR}/site/index.html
 	DEPENDS 			${CMAKE_CURRENT_SOURCE_DIR}/conf.py
@@ -37,7 +48,10 @@ add_custom_command(
 						${CMAKE_CURRENT_SOURCE_DIR}/material.rst
 						${CMAKE_CURRENT_SOURCE_DIR}/settings.rst
 						${CMAKE_CURRENT_SOURCE_DIR}/menu-commands.rst
-	COMMAND 			${Sphinx_EXECUTABLE} -b html -Dversion=${CMAKE_PROJECT_VERSION} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/site
+						${CMAKE_CURRENT_SOURCE_DIR}/api-reference.rst
+						${CMAKE_CURRENT_SOURCE_DIR}/manager-api.rst
+                        ${CMAKE_CURRENT_BINARY_DIR}/xml/index.xml
+	COMMAND 			${Sphinx_EXECUTABLE} -b html -Dbreathe_projects.SteamAudioUnity=${CMAKE_CURRENT_BINARY_DIR}/xml -Dversion=${CMAKE_PROJECT_VERSION} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/site
 	WORKING_DIRECTORY	${CMAKE_CURRENT_SOURCE_DIR}
 	VERBATIM
 )
